--- a/station.html
+++ b/station.html
@@ -118,6 +118,24 @@
             color: #666;
         }
 
+        .condition-link {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+            padding: 0.5rem;
+            margin: -0.5rem;
+            border-radius: 8px;
+            transition: background 0.15s;
+        }
+
+        .condition-link:hover {
+            background: #f5f5f5;
+        }
+
+        .condition-link:hover .condition-value {
+            color: #2a9d8f;
+        }
+
         .chart-container {
             background: #fff;
             border-radius: 8px;
@@ -220,8 +238,10 @@
                 <div class="condition-value" id="airTemp">--</div>
             </div>
             <div class="condition-item">
-                <div class="condition-label">Pressure</div>
-                <div class="condition-value" id="pressure">--</div>
+                <a href="pressure.html" class="condition-link">
+                    <div class="condition-label">Pressure</div>
+                    <div class="condition-value" id="pressure">--</div>
+                </a>
             </div>
             <div class="condition-item">
                 <div class="condition-label">Humidity</div>
@@ -248,16 +268,6 @@
             </div>
         </div>
 
-        <div class="chart-container">
-            <div class="chart-title">Barometric Pressure</div>
-            <canvas id="pressureChart" class="chart-canvas"></canvas>
-            <div class="legend">
-                <div class="legend-item">
-                    <div class="legend-color" style="background: #2a9d8f;"></div>
-                    <span>Pressure (hPa)</span>
-                </div>
-            </div>
-        </div>
     </main>
 
     <footer>
@@ -268,8 +278,11 @@
     <script>
         // Station URLs
         // Use local proxy when running on localhost, direct BOM URLs otherwise
-        const USE_PROXY = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
-        const BOM_BASE = USE_PROXY ? '/bom-proxy/' : 'https://www.bom.gov.au/fwo/IDT60901/';
+        // CONFIGURATION: Set your Cloudflare Worker URL here after deployment
+        const WORKER_URL = 'https://d1-template.charliedixon49.workers.dev/'; // e.g., 'https://roaring-proxy.your-subdomain.workers.dev/'
+
+        const isLocalhost = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
+        const BOM_BASE = isLocalhost ? '/bom-proxy/' : WORKER_URL;
 
         const STATION_URLS = {
             '94988': BOM_BASE + 'IDT60901.94988.json',
@@ -541,18 +554,6 @@
                 minY: 0
             });
 
-            // Pressure chart
-            drawLineChart(document.getElementById('pressureChart'), [
-                {
-                    data: displayData.map(d => d.press),
-                    color: '#2a9d8f',
-                    lineWidth: 2
-                }
-            ], {
-                labels: times,
-                yLabel: 'Pressure (hPa)',
-                decimals: 1
-            });
         }
 
         // Load station data
