--- a/station.html
+++ b/station.html
@@ -144,11 +144,45 @@
             margin-bottom: 1.5rem;
         }
 
+        .chart-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+        }
+
         .chart-title {
             font-size: 1rem;
             font-weight: 500;
-            margin-bottom: 1rem;
             color: #1a1a1a;
+        }
+
+        .time-range-btns {
+            display: flex;
+            gap: 0.25rem;
+        }
+
+        .time-range-btn {
+            background: #f5f5f5;
+            border: 1px solid #e0e0e0;
+            padding: 0.35rem 0.75rem;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.75rem;
+            color: #666;
+            transition: all 0.15s;
+        }
+
+        .time-range-btn:hover {
+            background: #eee;
+        }
+
+        .time-range-btn.active {
+            background: #333;
+            color: #fff;
+            border-color: #333;
         }
 
         .chart-canvas {
@@ -250,7 +284,14 @@
         </div>
 
         <div class="chart-container">
-            <div class="chart-title">Wind Speed, Gusts & Direction</div>
+            <div class="chart-header">
+                <div class="chart-title">Wind Speed, Gusts & Direction</div>
+                <div class="time-range-btns">
+                    <button class="time-range-btn" data-hours="3">3h</button>
+                    <button class="time-range-btn active" data-hours="6">6h</button>
+                    <button class="time-range-btn" data-hours="12">12h</button>
+                </div>
+            </div>
             <canvas id="windChart" class="chart-canvas" style="height: 300px;"></canvas>
             <div class="legend">
                 <div class="legend-item">
@@ -306,6 +347,7 @@
 
         let stationId = null;
         let chartData = [];
+        let selectedHours = 6; // Default to 6 hours (36 data points at 10min intervals)
 
         // Convert wind direction to degrees
         function windDirToDegrees(dir) {
@@ -520,8 +562,10 @@
             // Reverse data so oldest is first (left side of chart)
             const reversed = [...data].reverse();
 
-            // Take last 24 hours worth of data (144 readings at 10min intervals, but usually ~72 available)
-            const displayData = reversed.slice(-72);
+            // Calculate how many data points to show based on selected hours
+            // BOM data is at 10-minute intervals, so 6 per hour
+            const dataPoints = selectedHours * 6;
+            const displayData = reversed.slice(-dataPoints);
 
             const times = displayData.map(d => {
                 const dt = parseDateTime(d.local_date_time_full);
@@ -554,6 +598,24 @@
                 minY: 0
             });
 
+        }
+
+        // Handle time range button clicks
+        function setupTimeRangeButtons() {
+            const buttons = document.querySelectorAll('.time-range-btn');
+            buttons.forEach(btn => {
+                btn.addEventListener('click', () => {
+                    // Update active state
+                    buttons.forEach(b => b.classList.remove('active'));
+                    btn.classList.add('active');
+
+                    // Update selected hours and redraw
+                    selectedHours = parseInt(btn.dataset.hours);
+                    if (chartData.length > 0) {
+                        drawCharts(chartData);
+                    }
+                });
+            });
         }
 
         // Load station data
@@ -619,6 +681,7 @@
             }
 
             document.getElementById('stationName').textContent = STATION_NAMES[stationId] || 'Loading...';
+            setupTimeRangeButtons();
             loadData();
 
             window.addEventListener('resize', handleResize);
